--- a/style.css
+++ b/style.css
@@ -17,12 +17,14 @@ body {
 
 .slide-container {
     max-width: 1120px;
-    width: 100%;
+    height: 500px;
+    width: 50%;
     padding: 40px 0;
 }
 
 .slide-content {
     margin: 0 40px;
+    height: 100%;
 }
 
 .card {
